--- a/index.html
+++ b/index.html
@@ -206,16 +206,17 @@
           </div>
 
 	          <div class="relative timeline rocket-timeline pl-10 space-y-6">
-		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+		          <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
 	              <div class="flex flex-col sm:flex-row gap-4">
 		                <div class="shrink-0 w-full sm:w-14">
 	                  <div class="rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
 	                    <img
-	                      src="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A//www.w3.org/2000/svg'%20width%3D'360'%20height%3D'240'%20viewBox%3D'0%200%20360%20240'%3E%3Cdefs%3E%3ClinearGradient%20id%3D'g'%20x1%3D'0'%20x2%3D'1'%20y1%3D'0'%20y2%3D'1'%3E%3Cstop%20stop-color%3D'%230b0f19'%20offset%3D'0'/%3E%3Cstop%20stop-color%3D'%231e293b'%20offset%3D'0.55'/%3E%3Cstop%20stop-color%3D'%232563eb'%20offset%3D'1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width%3D'360'%20height%3D'240'%20fill%3D'url(%23g)'/%3E%3Ccircle%20cx%3D'290'%20cy%3D'70'%20r%3D'58'%20fill%3D'rgba(96%2C165%2C250%2C0.22)'/%3E%3Cpath%20d%3D'M30%20185h300'%20stroke%3D'rgba(226%2C232%2C240%2C0.18)'%20stroke-width%3D'10'%20stroke-linecap%3D'round'/%3E%3Ctext%20x%3D'22'%20y%3D'78'%20fill%3D'%23e2e8f0'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'22'%20font-weight%3D'700'%3EExperi%C3%AAncia%3C/text%3E%3Ctext%20x%3D'22'%20y%3D'110'%20fill%3D'%2394a3b8'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'14'%3EImagem%20placeholder%3C/text%3E%3C/svg%3E"
+	                      src="https://media.licdn.com/dms/image/v2/D4D0BAQH1GuoGhIv7hg/company-logo_200_200/B4DZfHXtoxGYAI-/0/1751396572496?e=1772668800&v=beta&t=2xlDpk1P8-tyF-yEVMisx5nvRlRnp3w59iGXNWvVoiw"
 	                      alt="Imagem da experiência"
 		                      class="w-full h-24 sm:h-14 object-cover"
 	                      loading="lazy"
 	                      decoding="async"
+                        onclick="window.open('https://www.linkedin.com/company/paschoalotto/posts/?feedView=all/', '_blank')"
 	                    />
 	                  </div>
 	                </div>
@@ -224,56 +225,57 @@
 		                    <div class="min-w-0">
 		                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de Infraestrutura II</h4>
 		                      <p class="text-sm text-slate-300">Paschoalotto • Tempo integral</p>
-		                      <p class="text-xs text-slate-500">2024 — Atual • Bauru, SP • Híbrido</p>
+		                      <p class="text-xs text-slate-500">2025 — Atual • Bauru, SP • Híbrido</p>
 		                    </div>
 		                  </div>
-		                  <p class="text-slate-300 mt-2">Responsável por gestão de incidentes, administração de Active Directory, Microsoft 365, políticas de firewall FortiGate e monitoramento de ambientes corporativos via Grafana e Elastic.</p>
-		                  <ul class="mt-3 text-slate-400 text-sm space-y-1 list-disc list-inside">
-		                    <li>Administração de usuários, grupos e GPOs.</li>
-		                    <li>Gerenciamento de serviços Microsoft 365.</li>
-		                    <li>Acompanhamento de métricas e logs para prevenção de falhas.</li>
-		                  </ul>
+                        <p class="text-slate-300 mt-2">
+                        Promoção para atuação estratégica na sustentação e evolução dos serviços de TI, alinhado às práticas ITIL, com responsabilidade em gestão de incidentes, requisições e execução de mudanças (CHG), garantindo estabilidade e continuidade operacional.
+                        </p>
+                        <ul class="mt-3 text-slate-400 text-sm space-y-1 list-disc list-inside">
+                          <li>Planejamento e execução de Pedidos de Mudança (CHG) para melhorias e manutenções estruturais.</li>
+                          <li>Gestão de Incident Management e Service Request via ServiceNow, com foco em impacto e SLA.</li>
+                          <li>Atuação como ponto focal em incidentes críticos, com interação direta com stakeholders e diretoria.</li>
+                          <li>Troubleshooting avançado via análise de logs (FortiGate, Elastic, ARIA, Grafana).</li>
+                          <li>Automação de rotinas e padronização de processos técnicos.</li>
+                        </ul>
 		                </div>
 	              </div>
-	            </article>
-	
-		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+                <br>
 	              <div class="flex flex-col sm:flex-row gap-4">
 		                <div class="shrink-0 w-full sm:w-14">
-	                  <div class="rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
-	                    <img
-	                      src="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A//www.w3.org/2000/svg'%20width%3D'360'%20height%3D'240'%20viewBox%3D'0%200%20360%20240'%3E%3Cdefs%3E%3ClinearGradient%20id%3D'g'%20x1%3D'0'%20x2%3D'1'%20y1%3D'1'%20y2%3D'0'%3E%3Cstop%20stop-color%3D'%230b0f19'%20offset%3D'0'/%3E%3Cstop%20stop-color%3D'%232563eb'%20offset%3D'0.6'/%3E%3Cstop%20stop-color%3D'%2360a5fa'%20offset%3D'1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width%3D'360'%20height%3D'240'%20fill%3D'url(%23g)'/%3E%3Ccircle%20cx%3D'92'%20cy%3D'74'%20r%3D'56'%20fill%3D'rgba(37%2C99%2C235%2C0.22)'/%3E%3Cpath%20d%3D'M30%20185h300'%20stroke%3D'rgba(226%2C232%2C240%2C0.18)'%20stroke-width%3D'10'%20stroke-linecap%3D'round'/%3E%3Ctext%20x%3D'22'%20y%3D'78'%20fill%3D'%23e2e8f0'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'22'%20font-weight%3D'700'%3EExperi%C3%AAncia%3C/text%3E%3Ctext%20x%3D'22'%20y%3D'110'%20fill%3D'%2394a3b8'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'14'%3EImagem%20placeholder%3C/text%3E%3C/svg%3E"
-	                      alt="Imagem da experiência"
-		                      class="w-full h-24 sm:h-14 object-cover"
-	                      loading="lazy"
-	                      decoding="async"
-	                    />
-	                  </div>
+	                    <div class="rounded-lg overflow-hidden border border-slate-800 bg-deep/60"></div>
 	                </div>
 		                <div class="min-w-0 flex-1">
 		                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
 		                    <div class="min-w-0">
 		                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de Infraestrutura</h4>
 		                      <p class="text-sm text-slate-300">Paschoalotto • Tempo integral</p>
-		                      <p class="text-xs text-slate-500">2022 — 2024 • Bauru, SP</p>
+		                      <p class="text-xs text-slate-500">Abr de 2025 — nov de 2025 • Bauru, SP</p>
 		                    </div>
 		                  </div>
-		                  <p class="text-slate-300 mt-2">Atuação em rotinas de sustentação, suporte técnico de infraestrutura e automações para ganho de eficiência operacional.</p>
-		                  <ul class="mt-3 text-slate-400 text-sm space-y-1 list-disc list-inside">
-		                    <li>Suporte N1/N2 em incidentes e requisições.</li>
-		                    <li>Execução de scripts PowerShell para padronização de tarefas.</li>
-		                    <li>Gestão de ativos e documentação técnica do ambiente.</li>
+                        <p class="text-slate-300 mt-2">
+                        Atuação na gestão de incidentes e requisições via ServiceNow, com estruturação de fluxos operacionais, documentação técnica e foco em melhoria contínua. Administração de ambientes Active Directory e Microsoft 365, garantindo governança de acessos e conformidade com políticas corporativas. Troubleshooting avançado por meio da análise de logs e métricas em FortiGate, Elastic, ARIA e Grafana, assegurando estabilidade e mitigação de riscos.
+                        </p>
+                        <ul class="mt-3 text-slate-400 text-sm space-y-1 list-disc list-inside">
+                          <li>Gestão e resolução de incidentes N1/N2 com análise de impacto e identificação de causa raiz (RCA).</li>
+                          <li>Administração de usuários, grupos, UOs e GPOs no Active Directory, com controle de permissões e segurança.</li>
+                          <li>Gerenciamento de contas, licenciamento e recursos no Microsoft 365 e Exchange.</li>
+                          <li>Monitoramento contínuo de métricas e logs para prevenção de falhas e redução de recorrências.</li>
+                          <li>Padronização e documentação de processos técnicos, promovendo eficiência e rastreabilidade operacional.</li>
+                        </ul>
 		                  </ul>
-		                </div>
+                        <img src="https://media.licdn.com/dms/image/v2/D4D2DAQHUX_cBAo1YeA/profile-treasury-image-shrink_800_800/B4DZp6TSymJMAg-/0/1762988470149?e=1771826400&v=beta&t=VTft3ouy3uKs8xVepLYHTNdJzIIz0IfngdYvIqGCYZo">
+                    </div>
 	              </div>
+
+
 	            </article>
-	
 		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
 	              <div class="flex flex-col sm:flex-row gap-4">
 		                <div class="shrink-0 w-full sm:w-14">
 	                  <div class="rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
 	                    <img
-	                      src="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A//www.w3.org/2000/svg'%20width%3D'360'%20height%3D'240'%20viewBox%3D'0%200%20360%20240'%3E%3Cdefs%3E%3ClinearGradient%20id%3D'g'%20x1%3D'0'%20x2%3D'1'%20y1%3D'0'%20y2%3D'1'%3E%3Cstop%20stop-color%3D'%231f2937'%20offset%3D'0'/%3E%3Cstop%20stop-color%3D'%231e293b'%20offset%3D'0.55'/%3E%3Cstop%20stop-color%3D'%232563eb'%20offset%3D'1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width%3D'360'%20height%3D'240'%20fill%3D'url(%23g)'/%3E%3Ccircle%20cx%3D'285'%20cy%3D'165'%20r%3D'64'%20fill%3D'rgba(96%2C165%2C250%2C0.18)'/%3E%3Ctext%20x%3D'22'%20y%3D'78'%20fill%3D'%23e2e8f0'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'22'%20font-weight%3D'700'%3EExperi%C3%AAncia%3C/text%3E%3Ctext%20x%3D'22'%20y%3D'110'%20fill%3D'%2394a3b8'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'14'%3EImagem%20placeholder%3C/text%3E%3C/svg%3E"
+	                      src="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A//www.w3.org/2000/svg'%20width%3D'360'%20height%3D'240'%20viewBox%3D'0%200%20360%20240'%3E%3Cdefs%3E%3ClinearGradient%20id%3D'g'%20x1%3D'0'%20x2%3D'1'%20y1%3D'0'%20y2%3D'1'%3E%3Cstop%20stop-color%3D'%230b0f19'%20offset%3D'0'/%3E%3Cstop%20stop-color%3D'%232563eb'%20offset%3D'0.6'/%3E%3Cstop%20stop-color%3D'%2310b981'%20offset%3D'1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width%3D'360'%20height%3D'240'%20fill%3D'url(%23g)'/%3E%3Ccircle%20cx%3D'120'%20cy%3D'150'%20r%3D'72'%20fill%3D'rgba(16%2C185%2C129%2C0.18)'/%3E%3Ctext%20x%3D'22'%20y%3D'78'%20fill%3D'%23e2e8f0'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'22'%20font-weight%3D'700'%3EExperi%C3%AAncia%3C/text%3E%3Ctext%20x%3D'22'%20y%3D'110'%20fill%3D'%2394a3b8'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'14'%3EImagem%20placeholder%3C/text%3E%3C/svg%3E"
 	                      alt="Imagem da experiência"
 		                      class="w-full h-24 sm:h-14 object-cover"
 	                      loading="lazy"
@@ -284,16 +286,15 @@
 		                <div class="min-w-0 flex-1">
 		                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
 		                    <div class="min-w-0">
-		                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de TI</h4>
-		                      <p class="text-sm text-slate-300">KS2 • Tempo integral</p>
-		                      <p class="text-xs text-slate-500">2021 — 2022</p>
+		                      <h4 class="text-white font-semibold text-lg leading-snug">Fundador</h4>
+		                      <p class="text-sm text-slate-300">Attano Tech • Projeto pessoal</p>
+		                      <p class="text-xs text-slate-500">2019 — Atual</p>
 		                    </div>
 		                  </div>
-		                  <p class="text-slate-300 mt-2">Suporte e administração de serviços de TI com foco em disponibilidade dos recursos de rede, sistemas e usuários.</p>
+		                  <p class="text-slate-300 mt-2">Iniciativas em soluções técnicas e projetos de tecnologia, com foco em aprendizado prático, organização e entrega consistente.</p>
 		                </div>
 	              </div>
-	            </article>
-	
+	            </article>	
 		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
 	              <div class="flex flex-col sm:flex-row gap-4">
 		                <div class="shrink-0 w-full sm:w-14">
@@ -318,6 +319,7 @@
 		                  <p class="text-slate-300 mt-2">Atendimento técnico e resolução de chamados, contribuindo para continuidade operacional e qualidade do suporte.</p>
 		                </div>
 	              </div>
+              </article>
 	            </article>
 	
 		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
@@ -325,7 +327,7 @@
 		                <div class="shrink-0 w-full sm:w-14">
 	                  <div class="rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
 	                    <img
-	                      src="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A//www.w3.org/2000/svg'%20width%3D'360'%20height%3D'240'%20viewBox%3D'0%200%20360%20240'%3E%3Cdefs%3E%3ClinearGradient%20id%3D'g'%20x1%3D'0'%20x2%3D'1'%20y1%3D'0'%20y2%3D'1'%3E%3Cstop%20stop-color%3D'%230b0f19'%20offset%3D'0'/%3E%3Cstop%20stop-color%3D'%232563eb'%20offset%3D'0.6'/%3E%3Cstop%20stop-color%3D'%2310b981'%20offset%3D'1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width%3D'360'%20height%3D'240'%20fill%3D'url(%23g)'/%3E%3Ccircle%20cx%3D'120'%20cy%3D'150'%20r%3D'72'%20fill%3D'rgba(16%2C185%2C129%2C0.18)'/%3E%3Ctext%20x%3D'22'%20y%3D'78'%20fill%3D'%23e2e8f0'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'22'%20font-weight%3D'700'%3EExperi%C3%AAncia%3C/text%3E%3Ctext%20x%3D'22'%20y%3D'110'%20fill%3D'%2394a3b8'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'14'%3EImagem%20placeholder%3C/text%3E%3C/svg%3E"
+	                      src="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A//www.w3.org/2000/svg'%20width%3D'360'%20height%3D'240'%20viewBox%3D'0%200%20360%20240'%3E%3Cdefs%3E%3ClinearGradient%20id%3D'g'%20x1%3D'0'%20x2%3D'1'%20y1%3D'0'%20y2%3D'1'%3E%3Cstop%20stop-color%3D'%231f2937'%20offset%3D'0'/%3E%3Cstop%20stop-color%3D'%231e293b'%20offset%3D'0.55'/%3E%3Cstop%20stop-color%3D'%232563eb'%20offset%3D'1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width%3D'360'%20height%3D'240'%20fill%3D'url(%23g)'/%3E%3Ccircle%20cx%3D'285'%20cy%3D'165'%20r%3D'64'%20fill%3D'rgba(96%2C165%2C250%2C0.18)'/%3E%3Ctext%20x%3D'22'%20y%3D'78'%20fill%3D'%23e2e8f0'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'22'%20font-weight%3D'700'%3EExperi%C3%AAncia%3C/text%3E%3Ctext%20x%3D'22'%20y%3D'110'%20fill%3D'%2394a3b8'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'14'%3EImagem%20placeholder%3C/text%3E%3C/svg%3E"
 	                      alt="Imagem da experiência"
 		                      class="w-full h-24 sm:h-14 object-cover"
 	                      loading="lazy"
@@ -336,12 +338,12 @@
 		                <div class="min-w-0 flex-1">
 		                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
 		                    <div class="min-w-0">
-		                      <h4 class="text-white font-semibold text-lg leading-snug">Fundador</h4>
-		                      <p class="text-sm text-slate-300">Attano Tech • Projeto pessoal</p>
-		                      <p class="text-xs text-slate-500">2019 — Atual</p>
+		                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de TI</h4>
+		                      <p class="text-sm text-slate-300">KS2 • Tempo integral</p>
+		                      <p class="text-xs text-slate-500">2021 — 2022</p>
 		                    </div>
 		                  </div>
-		                  <p class="text-slate-300 mt-2">Iniciativas em soluções técnicas e projetos de tecnologia, com foco em aprendizado prático, organização e entrega consistente.</p>
+		                  <p class="text-slate-300 mt-2">Suporte e administração de serviços de TI com foco em disponibilidade dos recursos de rede, sistemas e usuários.</p>
 		                </div>
 	              </div>
 	            </article>
