--- a/index.html
+++ b/index.html
@@ -207,32 +207,27 @@
 
 		          <div class="relative timeline rocket-timeline pl-10 space-y-6">
 		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
-		              <div class="flex gap-4">
-		                <button
-		                  type="button"
-		                  data-story
-		                  data-modal="image-only"
-		                  data-title="Paschoalotto"
-		                  data-img="https://media.licdn.com/dms/image/v2/D4D0BAQH1GuoGhIv7hg/company-logo_200_200/B4DZfHXtoxGYAI-/0/1751396572496?e=1772668800&v=beta&t=2xlDpk1P8-tyF-yEVMisx5nvRlRnp3w59iGXNWvVoiw"
-		                  class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60 hover:border-electric/60 transition-colors"
-		                  aria-label="Ampliar logo da Paschoalotto"
-		                >
-		                  <img
-		                    src="https://media.licdn.com/dms/image/v2/D4D0BAQH1GuoGhIv7hg/company-logo_200_200/B4DZfHXtoxGYAI-/0/1751396572496?e=1772668800&v=beta&t=2xlDpk1P8-tyF-yEVMisx5nvRlRnp3w59iGXNWvVoiw"
-		                    alt="Logo da Paschoalotto"
-		                    class="w-full h-full object-cover"
-		                    loading="lazy"
-		                    decoding="async"
-		                  />
-		                </button>
-		                <div class="min-w-0 flex-1">
-		                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
-		                    <div class="min-w-0">
-		                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de Infraestrutura II</h4>
-		                      <p class="text-sm text-slate-300">Paschoalotto • Tempo integral</p>
-		                      <p class="text-xs text-slate-500">2025 — Atual • Bauru, SP • Híbrido</p>
-		                    </div>
-		                  </div>
+			              <div class="flex gap-4">
+			                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
+			                  <img
+			                    src="https://media.licdn.com/dms/image/v2/D4D0BAQH1GuoGhIv7hg/company-logo_200_200/B4DZfHXtoxGYAI-/0/1751396572496?e=1772668800&v=beta&t=2xlDpk1P8-tyF-yEVMisx5nvRlRnp3w59iGXNWvVoiw"
+			                    alt="Logo da Paschoalotto"
+			                    class="w-full h-full object-cover"
+			                    loading="lazy"
+			                    decoding="async"
+			                  />
+			                </div>
+			                <div class="min-w-0 flex-1">
+			                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
+			                    <div class="min-w-0">
+			                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de Infraestrutura II</h4>
+			                      <p class="text-sm text-slate-300">
+			                        <a href="https://www.linkedin.com/company/paschoalotto/" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4">Paschoalotto</a>
+			                        • Tempo integral
+			                      </p>
+			                      <p class="text-xs text-slate-500">2025 — Atual • Bauru, SP • Híbrido</p>
+			                    </div>
+			                  </div>
 		                  <p class="text-slate-300 mt-2">
 		                    Promoção para atuação estratégica na sustentação e evolução dos serviços de TI, alinhado às práticas ITIL, com responsabilidade em gestão de incidentes, requisições e execução de mudanças (CHG), garantindo estabilidade e continuidade operacional.
 		                  </p>
@@ -248,32 +243,27 @@
 		            </article>
 
 		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
-		              <div class="flex gap-4">
-		                <button
-		                  type="button"
-		                  data-story
-		                  data-modal="image-only"
-		                  data-title="Paschoalotto"
-		                  data-img="https://media.licdn.com/dms/image/v2/D4D0BAQH1GuoGhIv7hg/company-logo_200_200/B4DZfHXtoxGYAI-/0/1751396572496?e=1772668800&v=beta&t=2xlDpk1P8-tyF-yEVMisx5nvRlRnp3w59iGXNWvVoiw"
-		                  class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60 hover:border-electric/60 transition-colors"
-		                  aria-label="Ampliar logo da Paschoalotto"
-		                >
-		                  <img
-		                    src="https://media.licdn.com/dms/image/v2/D4D0BAQH1GuoGhIv7hg/company-logo_200_200/B4DZfHXtoxGYAI-/0/1751396572496?e=1772668800&v=beta&t=2xlDpk1P8-tyF-yEVMisx5nvRlRnp3w59iGXNWvVoiw"
-		                    alt="Logo da Paschoalotto"
-		                    class="w-full h-full object-cover"
-		                    loading="lazy"
-		                    decoding="async"
-		                  />
-		                </button>
-		                <div class="min-w-0 flex-1">
-		                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
-		                    <div class="min-w-0">
-		                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de Infraestrutura</h4>
-		                      <p class="text-sm text-slate-300">Paschoalotto • Tempo integral</p>
-		                      <p class="text-xs text-slate-500">Abr de 2025 — nov de 2025 • Bauru, SP</p>
-		                    </div>
-		                  </div>
+			              <div class="flex gap-4">
+			                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
+			                  <img
+			                    src="https://media.licdn.com/dms/image/v2/D4D0BAQH1GuoGhIv7hg/company-logo_200_200/B4DZfHXtoxGYAI-/0/1751396572496?e=1772668800&v=beta&t=2xlDpk1P8-tyF-yEVMisx5nvRlRnp3w59iGXNWvVoiw"
+			                    alt="Logo da Paschoalotto"
+			                    class="w-full h-full object-cover"
+			                    loading="lazy"
+			                    decoding="async"
+			                  />
+			                </div>
+			                <div class="min-w-0 flex-1">
+			                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
+			                    <div class="min-w-0">
+			                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de Infraestrutura</h4>
+			                      <p class="text-sm text-slate-300">
+			                        <a href="https://www.linkedin.com/company/paschoalotto/" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4">Paschoalotto</a>
+			                        • Tempo integral
+			                      </p>
+			                      <p class="text-xs text-slate-500">Abr de 2025 — nov de 2025 • Bauru, SP</p>
+			                    </div>
+			                  </div>
 		                  <p class="text-slate-300 mt-2">
 		                    Atuação na gestão de incidentes e requisições via ServiceNow, com estruturação de fluxos operacionais, documentação técnica e foco em melhoria contínua. Administração de ambientes Active Directory e Microsoft 365, garantindo governança de acessos e conformidade com políticas corporativas. Troubleshooting avançado por meio da análise de logs e métricas em FortiGate, Elastic, ARIA e Grafana, assegurando estabilidade e mitigação de riscos.
 		                  </p>
@@ -309,32 +299,27 @@
 		            </article>
 
 		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
-		              <div class="flex gap-4">
-		                <button
-		                  type="button"
-		                  data-story
-		                  data-modal="image-only"
-		                  data-title="Attano Tech"
-		                  data-img="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A//www.w3.org/2000/svg'%20width%3D'200'%20height%3D'200'%20viewBox%3D'0%200%20200%20200'%3E%3Cdefs%3E%3ClinearGradient%20id%3D'g'%20x1%3D'0'%20x2%3D'1'%20y1%3D'0'%20y2%3D'1'%3E%3Cstop%20stop-color%3D'%230b0f19'%20offset%3D'0'/%3E%3Cstop%20stop-color%3D'%232563eb'%20offset%3D'0.6'/%3E%3Cstop%20stop-color%3D'%2310b981'%20offset%3D'1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width%3D'200'%20height%3D'200'%20fill%3D'url(%23g)'/%3E%3Ctext%20x%3D'24'%20y%3D'112'%20fill%3D'%23e2e8f0'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'28'%20font-weight%3D'700'%3EAT%3C/text%3E%3C/svg%3E"
-		                  class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60 hover:border-electric/60 transition-colors"
-		                  aria-label="Ampliar imagem da Attano Tech"
-		                >
-		                  <img
-		                    src="https://media.licdn.com/dms/image/v2/D4E0BAQE3NS1nXvCMlQ/company-logo_200_200/B4EZstRS15HMAI-/0/1765991067827/attanotech_logo?e=1772668800&v=beta&t=SRW2Mfw7y4nq9-gK0gAq05dm1gA_O0Eh4auxPAm7Bog"
-		                    alt="Logo da Attano Tech"
-		                    class="w-full h-full object-cover"
-		                    loading="lazy"
-		                    decoding="async"
-		                  />
-		                </button>
-		                <div class="min-w-0 flex-1">
-		                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
-		                    <div class="min-w-0">
-		                      <h4 class="text-white font-semibold text-lg leading-snug">Fundador</h4>
-		                      <p class="text-sm text-slate-300">Attano Tech • Projeto pessoal</p>
-		                      <p class="text-xs text-slate-500">ar de 2025 — Atual</p>
-		                    </div>
-		                  </div>
+			              <div class="flex gap-4">
+			                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
+			                  <img
+			                    src="https://media.licdn.com/dms/image/v2/D4E0BAQE3NS1nXvCMlQ/company-logo_200_200/B4EZstRS15HMAI-/0/1765991067827/attanotech_logo?e=1772668800&v=beta&t=SRW2Mfw7y4nq9-gK0gAq05dm1gA_O0Eh4auxPAm7Bog"
+			                    alt="Logo da Attano Tech"
+			                    class="w-full h-full object-cover"
+			                    loading="lazy"
+			                    decoding="async"
+			                  />
+			                </div>
+			                <div class="min-w-0 flex-1">
+			                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
+			                    <div class="min-w-0">
+			                      <h4 class="text-white font-semibold text-lg leading-snug">Fundador</h4>
+			                      <p class="text-sm text-slate-300">
+			                        <a href="https://www.linkedin.com/company/109381442" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4">Attano Tech</a>
+			                        • Projeto pessoal
+			                      </p>
+			                      <p class="text-xs text-slate-500">ar de 2025 — Atual</p>
+			                    </div>
+			                  </div>
                         <p class="text-slate-300 mt-2">
                         Iniciativa autoral voltada ao desenvolvimento de soluções técnicas e projetos de tecnologia, com foco em aprendizado contínuo, automação e construção prática de sistemas. Espaço dedicado à experimentação estruturada, organização de processos e entrega consistente de soluções funcionais.
                         </p>
@@ -351,32 +336,27 @@
 		            </article>
 
 		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
-		              <div class="flex gap-4">
-		                <button
-		                  type="button"
-		                  data-story
-		                  data-modal="image-only"
-		                  data-title="Linx"
-		                  data-img="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A//www.w3.org/2000/svg'%20width%3D'200'%20height%3D'200'%20viewBox%3D'0%200%20200%20200'%3E%3Cdefs%3E%3ClinearGradient%20id%3D'g'%20x1%3D'0'%20x2%3D'1'%20y1%3D'1'%20y2%3D'0'%3E%3Cstop%20stop-color%3D'%230b0f19'%20offset%3D'0'/%3E%3Cstop%20stop-color%3D'%231e293b'%20offset%3D'0.5'/%3E%3Cstop%20stop-color%3D'%2360a5fa'%20offset%3D'1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width%3D'200'%20height%3D'200'%20fill%3D'url(%23g)'/%3E%3Ctext%20x%3D'26'%20y%3D'112'%20fill%3D'%23e2e8f0'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'28'%20font-weight%3D'700'%3ELX%3C/text%3E%3C/svg%3E"
-		                  class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60 hover:border-electric/60 transition-colors"
-		                  aria-label="Ampliar imagem da Linx"
-		                >
-		                  <img
-		                    src="https://media.licdn.com/dms/image/v2/D4D0BAQFxkLcJLZy0eQ/company-logo_100_100/B4DZW1O5OJH4AY-/0/1742502335785/linxretail_logo?e=1772668800&v=beta&t=f6hKDr_Q68cS7v8FwJF5TaG7LMyO9vPDThWrte6iNOM"
-		                    alt="Logo da Linx"
-		                    class="w-full h-full object-cover"
-		                    loading="lazy"
-		                    decoding="async"
-		                  />
-		                </button>
-		                <div class="min-w-0 flex-1">
-		                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
-		                    <div class="min-w-0">
-		                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de Suporte</h4>
-		                      <p class="text-sm text-slate-300">Linx • Tempo integral</p>
-		                      <p class="text-xs text-slate-500">abr de 2023 — abr de 2025</p>
-		                    </div>
-		                  </div>
+			              <div class="flex gap-4">
+			                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
+			                  <img
+			                    src="https://media.licdn.com/dms/image/v2/D4D0BAQFxkLcJLZy0eQ/company-logo_100_100/B4DZW1O5OJH4AY-/0/1742502335785/linxretail_logo?e=1772668800&v=beta&t=f6hKDr_Q68cS7v8FwJF5TaG7LMyO9vPDThWrte6iNOM"
+			                    alt="Logo da Linx"
+			                    class="w-full h-full object-cover"
+			                    loading="lazy"
+			                    decoding="async"
+			                  />
+			                </div>
+			                <div class="min-w-0 flex-1">
+			                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
+			                    <div class="min-w-0">
+			                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de Suporte</h4>
+			                      <p class="text-sm text-slate-300">
+			                        <a href="https://www.linkedin.com/company/223829/" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4">Linx</a>
+			                        • Tempo integral
+			                      </p>
+			                      <p class="text-xs text-slate-500">abr de 2023 — abr de 2025</p>
+			                    </div>
+			                  </div>
                         <p class="text-slate-300 mt-2">
                         Atuação em suporte técnico especializado a sistemas integrados de ERP e PDV, com foco em gestão de incidentes, atendimento omnichannel e sustentação de aplicações em ambiente corporativo. Responsável pela análise técnica, configuração de sistemas e manutenção de base de dados, garantindo continuidade operacional e experiência do cliente.
                         </p>
@@ -392,30 +372,25 @@
 		              </div>
 		            </article>
 
-		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
-		              <div class="flex gap-4">
-		                <button
-		                  type="button"
-		                  data-story
-		                  data-modal="image-only"
-		                  data-title="KS2"
-		                  data-img="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A//www.w3.org/2000/svg'%20width%3D'200'%20height%3D'200'%20viewBox%3D'0%200%20200%20200'%3E%3Cdefs%3E%3ClinearGradient%20id%3D'g'%20x1%3D'0'%20x2%3D'1'%20y1%3D'0'%20y2%3D'1'%3E%3Cstop%20stop-color%3D'%231f2937'%20offset%3D'0'/%3E%3Cstop%20stop-color%3D'%231e293b'%20offset%3D'0.55'/%3E%3Cstop%20stop-color%3D'%232563eb'%20offset%3D'1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect%20width%3D'200'%20height%3D'200'%20fill%3D'url(%23g)'/%3E%3Ctext%20x%3D'24'%20y%3D'112'%20fill%3D'%23e2e8f0'%20font-family%3D'Inter%2C%20Arial'%20font-size%3D'28'%20font-weight%3D'700'%3EKS%3C/text%3E%3C/svg%3E"
-		                  class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60 hover:border-electric/60 transition-colors"
-		                  aria-label="Ampliar imagem da KS2"
-		                >
-		                  <img
-		                    src="https://media.licdn.com/dms/image/v2/C4D0BAQFzg7zo2wqWsw/company-logo_200_200/company-logo_200_200/0/1630497065054/ks2solucoes_logo?e=1772668800&v=beta&t=Pv300CDuJ9fH8c1IJ4T8AtWyWQogcYRSESOCs-OrmSQ"
-		                    alt="Logo da KS2"
-		                    class="w-full h-full object-cover"
-		                    loading="lazy"
-		                    decoding="async"
-		                  />
-		                </button>
-		                <div class="min-w-0 flex-1">
+			            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+			              <div class="flex gap-4">
+			                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
+			                  <img
+			                    src="https://media.licdn.com/dms/image/v2/C4D0BAQFzg7zo2wqWsw/company-logo_100_100/company-logo_100_100/0/1630497065054/ks2solucoes_logo?e=1772668800&v=beta&t=f9bvEREPu2y4fODV9vaNqHO7IJXiKlQbT7GelT0--_M"
+			                    alt="Logo da KS2"
+			                    class="w-full h-full object-cover"
+			                    loading="lazy"
+			                    decoding="async"
+			                  />
+			                </div>
+			                <div class="min-w-0 flex-1">
 		                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
 		                    <div class="min-w-0">
 		                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de TI</h4>
-		                      <p class="text-sm text-slate-300">KS2 • Tempo integral</p>
+			                      <p class="text-sm text-slate-300">
+			                        <a href="https://www.linkedin.com/company/ks2solucoes" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4">KS2</a>
+			                        • Tempo integral
+			                      </p>
 		                      <p class="text-xs text-slate-500">2021 — 2022</p>
 		                    </div>
 		                  </div>
