--- a/index.html
+++ b/index.html
@@ -206,102 +206,89 @@
           </div>
 
 		          <div class="relative timeline rocket-timeline pl-10 space-y-6">
-		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
-			              <div class="flex gap-4">
-			                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
-			                  <img
-			                    src="https://media.licdn.com/dms/image/v2/D4D0BAQH1GuoGhIv7hg/company-logo_200_200/B4DZfHXtoxGYAI-/0/1751396572496?e=1772668800&v=beta&t=2xlDpk1P8-tyF-yEVMisx5nvRlRnp3w59iGXNWvVoiw"
-			                    alt="Logo da Paschoalotto"
-			                    class="w-full h-full object-cover"
-			                    loading="lazy"
-			                    decoding="async"
-			                  />
-			                </div>
-			                <div class="min-w-0 flex-1">
-			                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
-			                    <div class="min-w-0">
-			                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de Infraestrutura II</h4>
-			                      <p class="text-sm text-slate-300">
-			                        <a href="https://www.linkedin.com/company/paschoalotto/" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4">Paschoalotto</a>
-			                        • Tempo integral
-			                      </p>
-			                      <p class="text-xs text-slate-500">2025 — Atual • Bauru, SP • Híbrido</p>
-			                    </div>
-			                  </div>
-		                  <p class="text-slate-300 mt-2">
-		                    Promoção para atuação estratégica na sustentação e evolução dos serviços de TI, alinhado às práticas ITIL, com responsabilidade em gestão de incidentes, requisições e execução de mudanças (CHG), garantindo estabilidade e continuidade operacional.
-		                  </p>
-		                  <ul class="mt-3 text-slate-400 text-sm space-y-1 list-disc list-inside">
-		                    <li>Planejamento e execução de Pedidos de Mudança (CHG) para melhorias e manutenções estruturais.</li>
-		                    <li>Gestão de Incident Management e Service Request via ServiceNow, com foco em impacto e SLA.</li>
-		                    <li>Atuação como ponto focal em incidentes críticos, com interação direta com stakeholders e diretoria.</li>
-		                    <li>Troubleshooting avançado via análise de logs (FortiGate, Elastic, ARIA, Grafana).</li>
-		                    <li>Automação de rotinas e padronização de processos técnicos.</li>
-		                  </ul>
-		                </div>
-		              </div>
-		            </article>
+				            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+				              <div class="flex gap-4">
+				                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
+				                  <img
+				                    src="https://media.licdn.com/dms/image/v2/D4D0BAQH1GuoGhIv7hg/company-logo_200_200/B4DZfHXtoxGYAI-/0/1751396572496?e=1772668800&v=beta&t=2xlDpk1P8-tyF-yEVMisx5nvRlRnp3w59iGXNWvVoiw"
+				                    alt="Logo da Paschoalotto"
+				                    class="w-full h-full object-cover"
+				                    loading="lazy"
+				                    decoding="async"
+				                  />
+				                </div>
+				                <div class="min-w-0 flex-1">
+				                  <div class="min-w-0">
+				                    <h4 class="text-white font-semibold text-lg leading-snug">
+				                      <a href="https://www.linkedin.com/company/paschoalotto/" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4">Paschoalotto</a>
+				                    </h4>
+				                    <p class="text-xs text-slate-500">Evolução de carreira • Tempo integral</p>
+				                  </div>
 
-		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
-			              <div class="flex gap-4">
-			                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
-			                  <img
-			                    src="https://media.licdn.com/dms/image/v2/D4D0BAQH1GuoGhIv7hg/company-logo_200_200/B4DZfHXtoxGYAI-/0/1751396572496?e=1772668800&v=beta&t=2xlDpk1P8-tyF-yEVMisx5nvRlRnp3w59iGXNWvVoiw"
-			                    alt="Logo da Paschoalotto"
-			                    class="w-full h-full object-cover"
-			                    loading="lazy"
-			                    decoding="async"
-			                  />
-			                </div>
-			                <div class="min-w-0 flex-1">
-			                  <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
-			                    <div class="min-w-0">
-			                      <h4 class="text-white font-semibold text-lg leading-snug">Analista de Infraestrutura</h4>
-			                      <p class="text-sm text-slate-300">
-			                        <a href="https://www.linkedin.com/company/paschoalotto/" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4">Paschoalotto</a>
-			                        • Tempo integral
-			                      </p>
-			                      <p class="text-xs text-slate-500">Abr de 2025 — nov de 2025 • Bauru, SP</p>
-			                    </div>
-			                  </div>
-		                  <p class="text-slate-300 mt-2">
-		                    Atuação na gestão de incidentes e requisições via ServiceNow, com estruturação de fluxos operacionais, documentação técnica e foco em melhoria contínua. Administração de ambientes Active Directory e Microsoft 365, garantindo governança de acessos e conformidade com políticas corporativas. Troubleshooting avançado por meio da análise de logs e métricas em FortiGate, Elastic, ARIA e Grafana, assegurando estabilidade e mitigação de riscos.
-		                  </p>
-		                  <ul class="mt-3 text-slate-400 text-sm space-y-1 list-disc list-inside">
-		                    <li>Gestão e resolução de incidentes N1/N2 com análise de impacto e identificação de causa raiz (RCA).</li>
-		                    <li>Administração de usuários, grupos, UOs e GPOs no Active Directory, com controle de permissões e segurança.</li>
-		                    <li>Gerenciamento de contas, licenciamento e recursos no Microsoft 365 e Exchange.</li>
-		                    <li>Monitoramento contínuo de métricas e logs para prevenção de falhas e redução de recorrências.</li>
-		                    <li>Padronização e documentação de processos técnicos, promovendo eficiência e rastreabilidade operacional.</li>
-		                  </ul>
+				                  <div class="mt-5 relative">
+				                    <div class="absolute left-[-2.5rem] top-0 bottom-0 w-px bg-slate-700/70"></div>
+				                    <div class="space-y-6">
+				                      <div class="relative">
+				                        <span class="absolute left-[-2.875rem] top-2 w-3 h-3 rounded-full border-2 border-electric bg-deep shadow-[0_0_0_4px_rgba(37,99,235,.14)]"></span>
+				                        <h5 class="text-white font-semibold leading-snug">Analista de Infraestrutura II</h5>
+				                        <p class="text-xs text-slate-500">2025 — Atual • Bauru, SP • Híbrido</p>
+				                        <p class="text-slate-300 mt-2">
+				                          Promoção para atuação estratégica na sustentação e evolução dos serviços de TI, alinhado às práticas ITIL, com responsabilidade em gestão de incidentes, requisições e execução de mudanças (CHG), garantindo estabilidade e continuidade operacional.
+				                        </p>
+				                        <ul class="mt-3 text-slate-400 text-sm space-y-1 list-disc list-inside">
+				                          <li>Planejamento e execução de Pedidos de Mudança (CHG) para melhorias e manutenções estruturais.</li>
+				                          <li>Gestão de Incident Management e Service Request via ServiceNow, com foco em impacto e SLA.</li>
+				                          <li>Atuação como ponto focal em incidentes críticos, com interação direta com stakeholders e diretoria.</li>
+				                          <li>Troubleshooting avançado via análise de logs (FortiGate, Elastic, ARIA, Grafana).</li>
+				                          <li>Automação de rotinas e padronização de processos técnicos.</li>
+				                        </ul>
+				                      </div>
 
-		                  <div class="mt-4 flex gap-3">
-		                    <button
-		                      type="button"
-		                      data-story
-		                      data-modal="image-only"
-		                      data-title="Imagem da experiência"
-		                      data-img="https://media.licdn.com/dms/image/v2/D4D2DAQHUX_cBAo1YeA/profile-treasury-image-shrink_800_800/B4DZp6TSymJMAg-/0/1762988470149?e=1771826400&v=beta&t=VTft3ouy3uKs8xVepLYHTNdJzIIz0IfngdYvIqGCYZo"
-		                      class="soft-glow rounded-xl border border-slate-800 bg-deep/60 overflow-hidden"
-		                      aria-label="Ampliar imagem da experiência"
-		                    >
-		                      <img
-		                        src="https://media.licdn.com/dms/image/v2/D4D2DAQHUX_cBAo1YeA/profile-treasury-image-shrink_800_800/B4DZp6TSymJMAg-/0/1762988470149?e=1771826400&v=beta&t=VTft3ouy3uKs8xVepLYHTNdJzIIz0IfngdYvIqGCYZo"
-		                        alt="Imagem da experiência"
-		                        class="w-32 h-20 object-cover"
-		                        loading="lazy"
-		                        decoding="async"
-		                      />
-		                    </button>
-		                  </div>
-		                </div>
-		              </div>
-		            </article>
+				                      <div class="relative">
+				                        <span class="absolute left-[-2.875rem] top-2 w-3 h-3 rounded-full border-2 border-electric bg-deep shadow-[0_0_0_4px_rgba(37,99,235,.14)]"></span>
+				                        <h5 class="text-white font-semibold leading-snug">Analista de Infraestrutura</h5>
+				                        <p class="text-xs text-slate-500">Abr de 2025 — nov de 2025 • Bauru, SP</p>
+				                        <p class="text-slate-300 mt-2">
+				                          Atuação na gestão de incidentes e requisições via ServiceNow, com estruturação de fluxos operacionais, documentação técnica e foco em melhoria contínua. Administração de ambientes Active Directory e Microsoft 365, garantindo governança de acessos e conformidade com políticas corporativas. Troubleshooting avançado por meio da análise de logs e métricas em FortiGate, Elastic, ARIA e Grafana, assegurando estabilidade e mitigação de riscos.
+				                        </p>
+				                        <ul class="mt-3 text-slate-400 text-sm space-y-1 list-disc list-inside">
+				                          <li>Gestão e resolução de incidentes N1/N2 com análise de impacto e identificação de causa raiz (RCA).</li>
+				                          <li>Administração de usuários, grupos, UOs e GPOs no Active Directory, com controle de permissões e segurança.</li>
+				                          <li>Gerenciamento de contas, licenciamento e recursos no Microsoft 365 e Exchange.</li>
+				                          <li>Monitoramento contínuo de métricas e logs para prevenção de falhas e redução de recorrências.</li>
+				                          <li>Padronização e documentação de processos técnicos, promovendo eficiência e rastreabilidade operacional.</li>
+				                        </ul>
 
-		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
-			              <div class="flex gap-4">
-			                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
-			                  <img
+				                        <div class="mt-4 flex gap-3">
+				                          <button
+				                            type="button"
+				                            data-story
+				                            data-modal="image-only"
+				                            data-title="Imagem da experiência"
+				                            data-img="https://media.licdn.com/dms/image/v2/D4D2DAQHUX_cBAo1YeA/profile-treasury-image-shrink_800_800/B4DZp6TSymJMAg-/0/1762988470149?e=1771826400&v=beta&t=VTft3ouy3uKs8xVepLYHTNdJzIIz0IfngdYvIqGCYZo"
+				                            class="soft-glow rounded-xl border border-slate-800 bg-deep/60 overflow-hidden"
+				                            aria-label="Ampliar imagem da experiência"
+				                          >
+				                            <img
+				                              src="https://media.licdn.com/dms/image/v2/D4D2DAQHUX_cBAo1YeA/profile-treasury-image-shrink_800_800/B4DZp6TSymJMAg-/0/1762988470149?e=1771826400&v=beta&t=VTft3ouy3uKs8xVepLYHTNdJzIIz0IfngdYvIqGCYZo"
+				                              alt="Imagem da experiência"
+				                              class="w-32 h-20 object-cover"
+				                              loading="lazy"
+				                              decoding="async"
+				                            />
+				                          </button>
+				                        </div>
+				                      </div>
+				                    </div>
+				                  </div>
+				                </div>
+				              </div>
+				            </article>
+
+					            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+				              <div class="flex gap-4">
+				                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
+				                  <img
 			                    src="https://media.licdn.com/dms/image/v2/D4E0BAQE3NS1nXvCMlQ/company-logo_200_200/B4EZstRS15HMAI-/0/1765991067827/attanotech_logo?e=1772668800&v=beta&t=SRW2Mfw7y4nq9-gK0gAq05dm1gA_O0Eh4auxPAm7Bog"
 			                    alt="Logo da Attano Tech"
 			                    class="w-full h-full object-cover"
@@ -317,7 +304,7 @@
 			                        <a href="https://www.linkedin.com/company/109381442" target="_blank" rel="noopener noreferrer" class="text-blue-300 hover:text-blue-200 underline decoration-electric/60 underline-offset-4">Attano Tech</a>
 			                        • Projeto pessoal
 			                      </p>
-			                      <p class="text-xs text-slate-500">ar de 2025 — Atual</p>
+			                      <p class="text-xs text-slate-500">mar de 2025 — Atual</p>
 			                    </div>
 			                  </div>
                         <p class="text-slate-300 mt-2">
@@ -333,9 +320,21 @@
                         </ul>
 		                </div>
 		              </div>
-		            </article>
+			            </article>
 
-		            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+			            <div class="pl-2">
+			              <button
+			                type="button"
+			                data-exp-toggle
+			                aria-expanded="false"
+			                class="soft-glow inline-flex items-center gap-2 rounded-lg border border-slate-700 bg-graphite/35 px-4 py-2 text-sm font-semibold text-slate-100 hover:border-electric/60"
+			              >
+			                <span data-exp-toggle-label>Ver mais</span>
+			                <span class="material-icons text-[18px] text-blue-300">expand_more</span>
+			              </button>
+			            </div>
+
+			            <article data-reveal-item data-exp-extra class="hidden soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
 			              <div class="flex gap-4">
 			                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
 			                  <img
@@ -372,7 +371,7 @@
 		              </div>
 		            </article>
 
-			            <article data-reveal-item class="soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
+				            <article data-reveal-item data-exp-extra class="hidden soft-glow rounded-xl border border-slate-700 bg-graphite/40 p-6">
 			              <div class="flex gap-4">
 			                <div class="shrink-0 w-12 h-12 rounded-lg overflow-hidden border border-slate-800 bg-deep/60">
 			                  <img
@@ -827,6 +826,39 @@
 	        );
 
 	        revealTargets.forEach((el) => observer.observe(el));
+	      })();
+
+	      (() => {
+	        const toggleBtn = document.querySelector('[data-exp-toggle]');
+	        const extras = Array.from(document.querySelectorAll('[data-exp-extra]'));
+	        const label = document.querySelector('[data-exp-toggle-label]');
+	        if (!toggleBtn || !extras.length) return;
+
+	        const setExpanded = (expanded) => {
+	          toggleBtn.setAttribute('aria-expanded', String(expanded));
+	          if (label) label.textContent = expanded ? 'Ver menos' : 'Ver mais';
+
+	          const icon = toggleBtn.querySelector('.material-icons');
+	          if (icon) icon.textContent = expanded ? 'expand_less' : 'expand_more';
+
+	          extras.forEach((el, idx) => {
+	            el.classList.toggle('hidden', !expanded);
+	            if (!expanded) {
+	              el.classList.remove('is-visible');
+	              return;
+	            }
+
+	            el.classList.add('reveal');
+	            el.classList.remove('is-visible');
+	            window.setTimeout(() => el.classList.add('is-visible'), idx * 120);
+	          });
+	        };
+
+	        setExpanded(false);
+	        toggleBtn.addEventListener('click', () => {
+	          const expanded = toggleBtn.getAttribute('aria-expanded') === 'true';
+	          setExpanded(!expanded);
+	        });
 	      })();
 	    </script>
   </body>
